fixed pending deletion alignment

--- a/app/styles/management/user/_my-listings.scss
+++ b/app/styles/management/user/_my-listings.scss
@@ -113,7 +113,7 @@
         }
     }
 
-    .label-draft, .label-pending, .label-needs-action, .label-published, .label-rejected {
+    .label-draft, .label-pending, .label-needs-action, .label-published, .label-rejected, .label-pending-delete {
         i { 
             float: left;
         }
